# InkGrid

./: LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_post_views.py  0003_qa_pairs.py  0004_knowledge_base.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: __init__.py
backend/app/api/admin/: __init__.py  auth.py  channels.py  kb.py  knowledge.py  personas.py  policy.py  posts.py  qa.py  settings.py  stats.py  uploads.py
backend/app/api/public/: __init__.py  about.py  channels.py  chat_sessions.py  personas.py  posts.py  search.py  tags.py
backend/app/api/ws/: __init__.py  chat.py  voice.py
backend/app/collector/: api_source.py  crawler.py  dedup.py  extractor.py  pipeline.py
backend/app/core/: __init__.py  audit.py  errors.py  logging.py  moderation.py  rate_limit.py  security.py  session.py
backend/app/crud/: __init__.py  admin.py  base.py  channel.py  chat.py  knowledge.py  note_link.py  note_template.py  persona.py  policy.py  post.py  qa.py  stats.py
backend/app/db/: meili.py  milvus.py  redis.py  session.py
backend/app/ingest/: chunker.py  embedder.py  milvus_writer.py  parser.py  pipeline.py  toc.py
backend/app/models/: __init__.py  admin.py  base.py  channel.py  chat.py  knowledge.py  persona.py  policy.py  post.py  post_view.py  settings.py
backend/app/schemas/: auth.py  channel.py  chat.py  common.py  knowledge.py  note.py  persona.py  policy.py  post.py  qa.py  stats.py  ws.py
backend/app/services/: cms.py  note_tree.py  post_derive.py  search.py  storage.py  upload_security.py
backend/app/services/llm/: base.py  deepseek.py  prompt.py  qwen.py
backend/app/services/qa/: __init__.py  generator.py  milvus_writer.py
backend/app/services/rag/: agent.py  citation.py  context_builder.py  fallback.py  followups.py  pipeline.py  query_understanding.py  reranker.py  retriever.py
backend/app/services/voice/: asr.py  orchestrator.py  tts.py  vad.py
backend/app/tasks/: celery_app.py  collector_tasks.py  ingest_tasks.py  qa_tasks.py  reindex_tasks.py  schedule.py
backend/app/utils/: slug.py  text.py  time.py
backend/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/poc/: smoke_meili.py  smoke_meili_real.py  smoke_rag.py  smoke_real_article.py  smoke_ws.py
backend/scripts/: convert_bge_m3.py  create_admin.py  download_models.py  init_db.py  rebuild_milvus.py  smoke_llm.py  smoke_rag.py  smoke_reasoning.py  sync_meili.py
backend/tests/: conftest.py  test_chunker.py  test_envelope.py  test_errors.py  test_health.py  test_parser.py  test_post_schema.py  test_security.py  test_slug.py
backend/tests/api/: test_search.py  test_stats.py  test_upload_post.py
backend/tests/ingest/: test_toc.py
backend/tests/services/: test_post_derive.py  test_upload_security.py
backend/tests/services/llm/: test_prompt.py
backend/tests/services/rag/: test_citation.py  test_context_builder.py  test_fallback.py  test_pipeline.py  test_retriever.py
plan/: 2026-07-23-post-md-upload-plan.md  DESIGN.md  homee.html  产品与技术方案.md  前端模块设计文档.md  后端设计方案.md  数据表设计.md  文章详情.html  知识库结合方案.md  笔记.md  虚拟对话-2.html  虚拟对话.html  角色选择.html
web/: .env.development  .env.electron  .env.production  .gitignore  README.md  electron-builder.yml  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  providers.tsx  robots.ts  sitemap.ts
web/app/(chat)/: layout.tsx
web/app/(public)/: layout.tsx  page.tsx
web/app/admin/: layout.tsx  page.tsx
web/app/login/: page.tsx
web/components/admin/: NoteEditor.tsx  Placeholder.tsx  PostEditor.tsx
web/components/blog/: ArticleCard.tsx  (+3 more)
web/electron/: main.cjs  preload.cjs
web/hooks/: useAdmin.ts  useChannels.ts  useChat.ts  useSearch.ts
web/lib/: mock.ts  theme.ts  usePersona.ts  utils.ts
web/types/: index.ts
(+37 files in other folders)
