[project]
name = "inkgrid-backend"
version = "0.1.0"
description = "InkGrid 后端：博客 CMS + RAG 问答 + 语音通话 + 政策采集"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]

dependencies = [
    # Web 框架
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # ORM 与数据库
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # 缓存与限流
    "redis[hiredis]>=5.0",

    # 任务队列
    "celery>=5.3",

    # 鉴权
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",

    # 配置与日志
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",

    # HTTP 客户端
    "httpx>=0.27",

    # 对象存储（图片上传）
    "minio>=7.2",

    # 全文搜索（P3：文章即时搜索）
    "meilisearch>=0.31",
]

[project.optional-dependencies]
# P1+ RAG 管道相关：向量库 / Embedding / Reranker / LLM / 文档解析
# 进程内 embedding/reranker 需要 torch（CPU 版安装命令）：
#   pip install -e ".[rag]" --index-url https://download.pytorch.org/whl/cpu --extra-index-url https://pypi.org/simple
# TEI 服务模式不需要 torch，可省略 --index-url
rag = [
    "pymilvus>=2.4",
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.2",
    "openai>=1.30",
    "python-slugify>=8.0",
    "pydantic-ai>=2.0",
    "markdown-it-py>=3.0",
    # torch 为 sentence-transformers / FlagEmbedding 进程内推理所需
    # 这里仅声明，安装时建议用 CPU index 加速下载（见上方注释）
    "torch>=2.2",
]

dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-redis>=4.6",
]

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# 只打包 app 子树，排除 docker / alembic / scripts / tests
include = ["app*"]
exclude = ["tests*", "scripts*", "docker*", "alembic*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
